--- a/mainwin.ui
+++ b/mainwin.ui
@@ -75,7 +75,34 @@
       <number>1</number>
      </property>
      <widget class="QWidget" name="page"/>
-     <widget class="QWidget" name="page_2"/>
+     <widget class="QWidget" name="page_2">
+      <widget class="QPushButton" name="login_button">
+       <property name="geometry">
+        <rect>
+         <x>320</x>
+         <y>130</y>
+         <width>80</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>ЛОГИН</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="reg_button">
+       <property name="geometry">
+        <rect>
+         <x>400</x>
+         <y>130</y>
+         <width>80</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Регистрация</string>
+       </property>
+      </widget>
+     </widget>
     </widget>
    </widget>
   </widget>
