--- a/registration.ui
+++ b/registration.ui
@@ -25,7 +25,7 @@
    <property name="orientation">
     <enum>Qt::Vertical</enum>
    </property>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="QLineEdit" name="lineEdit"/>
@@ -37,7 +37,7 @@
       <widget class="QLineEdit" name="lineEdit_3"/>
      </item>
      <item>
-      <widget class="QComboBox" name="comboBox"/>
+      <widget class="QComboBox" name="list_buro"/>
      </item>
      <item>
       <widget class="QComboBox" name="comboBox_2"/>
@@ -50,7 +50,7 @@
     </property>
    </widget>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>1</x>
