--- a/form_to_add.ui
+++ b/form_to_add.ui
@@ -19,7 +19,7 @@
      <x>10</x>
      <y>10</y>
      <width>460</width>
-     <height>197</height>
+     <height>226</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -41,6 +41,13 @@
          <widget class="QLabel" name="label_2">
           <property name="text">
            <string>Изделие</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_8">
+          <property name="text">
+           <string>Тип работы</string>
           </property>
          </widget>
         </item>
@@ -81,6 +88,9 @@
         </item>
         <item>
          <widget class="QLineEdit" name="lineEdit_2"/>
+        </item>
+        <item>
+         <widget class="QComboBox" name="type_works"/>
         </item>
         <item>
          <widget class="QLineEdit" name="lineEdit_4"/>
@@ -131,7 +141,7 @@
     <string>Посмотреть работы</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>620</x>
