--- a/UI_static/table_all.ui
+++ b/UI_static/table_all.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>531</width>
-    <height>310</height>
+    <width>991</width>
+    <height>546</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -41,6 +41,13 @@
        <string>Количество листов</string>
       </property>
      </column>
+    </widget>
+   </item>
+   <item>
+    <widget class="QPushButton" name="update">
+     <property name="text">
+      <string>Обновить данные</string>
+     </property>
     </widget>
    </item>
   </layout>
