--- a/UI_static/admin_franme.ui
+++ b/UI_static/admin_franme.ui
@@ -24,7 +24,7 @@
     <rect>
      <x>260</x>
      <y>10</y>
-     <width>381</width>
+     <width>512</width>
      <height>32</height>
     </rect>
    </property>
@@ -375,6 +375,19 @@ QPushButton:checked {
    </property>
    <property name="text">
     <string/>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btn_to_excel">
+   <property name="geometry">
+    <rect>
+     <x>509</x>
+     <y>590</y>
+     <width>101</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>В ЭКСЕЛЬ</string>
    </property>
   </widget>
  </widget>
